--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.2.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "^2.9.0",
