--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/stack": "^6.3.11",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.2.4",
+    "dotenv": "^16.0.3",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-dotenv": "^3.4.7",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.2",
     "react-native-safe-area-context": "^4.4.1",
@@ -37,7 +39,7 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.70.3",
+    "metro-react-native-babel-preset": "^0.74.1",
     "react-test-renderer": "18.0.0",
     "typescript": "^4.4.4"
   },
