--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
+    "@reduxjs/toolkit": "^1.9.2",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.2.4",
     "dotenv": "^16.0.3",
@@ -23,6 +24,7 @@
     "react-native-reanimated": "^2.14.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.19.0",
+    "react-redux": "^8.0.5",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
